# source-python

./: .hgignore  ProjectHome.md  readme.txt
src/: CMakeLists.txt  configure-csgo-debug.bat  configure-csgo.bat  configure-ob.bat
src/core/addons/: es_addon.cpp  es_addon.h  sp_addon.cpp  sp_addon.h
src/core/core/: es_gamedir.cpp  es_gamedir.h  es_main.cpp  es_main.h  es_python.cpp  es_python.h  sp_gamedir.cpp  sp_gamedir.h  sp_main.cpp  sp_main.h  sp_python.cpp  sp_python.h
src/core/modules/: export_cvar.cpp  export_engine.cpp  export_entity.cpp  export_entity.h  export_events.cpp  export_main.cpp  export_main.h  export_misc.cpp  export_player.cpp  export_player.h  export_shared.cpp  export_usermsg.cpp
src/core/modules/binutils/: binutils_dyncall.cpp  binutils_main.cpp  binutils_memtools.cpp  binutils_scanner.cpp  binutils_scanner.h
src/core/modules/clientcmd/: clientcmd_main.cpp  clientcmd_manager.cpp  clientcmd_manager.h
src/core/modules/commands/: client_command_wrap.cpp  client_command_wrap.h  command_wrap.cpp  command_wrap.h  command_wrap_python.cpp  say_command_wrap.cpp  say_command_wrap.h  server_command_wrap.cpp  server_command_wrap.h
src/core/modules/cvar/: cvar_concommand.cpp  cvar_concommand.h  cvar_concommandbase.cpp  cvar_convar.cpp  cvar_engine_base.cpp  cvar_engine_base.h  cvar_flags.cpp  cvar_icvar.cpp  cvar_main.cpp  cvar_wrap.cpp  cvar_wrap.h  cvar_wrap_python.cpp
src/core/modules/cvar/engine1/: cvar_engine_implementation.h
src/core/modules/cvar/engine2/: cvar_engine_implementation.cpp  cvar_engine_implementation.h
src/core/modules/cvar/engine3/: cvar_engine_implementation.cpp  cvar_engine_implementation.h
src/core/modules/effects/: effects_wrap.cpp  effects_wrap.h  effects_wrap_python.cpp
src/core/modules/engine/: eiface_engine_base.cpp  eiface_engine_base.h  eiface_wrap.cpp  eiface_wrap.h  eiface_wrap_python.cpp  engine_basehandle.cpp  engine_main.cpp  engine_misc.cpp  engine_server.cpp  engine_sound.cpp  engine_trace.cpp  engine_trace.h
src/core/modules/engine/engine1/: eiface_engine_implementation.cpp  eiface_engine_implementation.h
src/core/modules/engine/engine2/: eiface_engine_implementation.h
src/core/modules/engine/engine3/: eiface_engine_implementation.cpp  eiface_engine_implementation.h
src/core/modules/engine/usermessage/: usermessage.cpp  usermessage.h  usermessage_implementation_base.cpp  usermessage_implementation_base.h  usermessage_wrap_python.cpp
src/core/modules/engine/usermessage/csgo/: usermessage_implementation.cpp  usermessage_implementation.h
src/core/modules/engine/usermessage/ob/: usermessage_implementation.cpp  usermessage_implementation.h
src/core/modules/entities/: entities_generator_wrap.cpp  entities_generator_wrap.h  entities_props.cpp  entities_props.h  entities_wrap.cpp  entities_wrap.h  entities_wrap_python.cpp
src/core/modules/entity/: entity_edict.cpp  entity_factory.cpp  entity_generator.cpp  entity_generator.h  entity_main.cpp  entity_props.cpp  entity_props.h
src/core/modules/events/: events_wrap.cpp  events_wrap.h  events_wrap_python.cpp
src/core/modules/globals/: globals_engine_base.cpp  globals_engine_base.h  globals_wrap.cpp  globals_wrap.h  globals_wrap_python.cpp
src/core/modules/globals/engine1/: globals_engine_implementation.cpp  globals_engine_implementation.h
src/core/modules/globals/engine2/: globals_engine_implementation.h
src/core/modules/globals/engine3/: globals_engine_implementation.cpp  globals_engine_implementation.h
src/core/modules/keyvalues/: keyvalues_wrap.cpp  keyvalues_wrap.h  keyvalues_wrap_python.cpp
src/core/modules/memory/: memory_hooks.cpp  memory_hooks.h  memory_scanner.cpp  memory_scanner.h  memory_tools.cpp  memory_tools.h  memory_wrap_python.cpp
src/core/modules/misc/: misc_effects.cpp  misc_main.cpp  misc_stringtables.cpp
src/core/modules/players/: players_generator_wrap.cpp  players_generator_wrap.h  players_wrap.cpp  players_wrap.h  players_wrap_python.cpp
src/core/modules/ticklisteners/: ticklisteners_wrap.cpp  ticklisteners_wrap.h  ticklisteners_wrap_python.cpp
src/core/modules/usermessages/csgo/: bindings.cpp  cstrike15_usermessages.pb.cc
src/core/modules/usermessages/csgo/usermessages/: CCSUsrMsg_AchievementEvent.cpp  CCSUsrMsg_AdjustMoney.cpp  CCSUsrMsg_AmmoDenied.cpp  CCSUsrMsg_BarTime.cpp  CCSUsrMsg_CallVoteFailed.cpp  CCSUsrMsg_ClientInfo.cpp  CCSUsrMsg_CloseCaption.cpp  CCSUsrMsg_CloseCaptionDirect.cpp  CCSUsrMsg_CurrentTimescale.cpp  CCSUsrMsg_Damage.cpp  CCSUsrMsg_DesiredTimescale.cpp  CCSUsrMsg_DisconnectToLobby.cpp  CCSUsrMsg_DisplayInventory.cpp  CCSUsrMsg_Fade.cpp  CCSUsrMsg_GameTitle.cpp  CCSUsrMsg_Geiger.cpp  CCSUsrMsg_HintText.cpp  CCSUsrMsg_HudMsg.cpp  CCSUsrMsg_HudText.cpp  CCSUsrMsg_ItemDrop.cpp  CCSUsrMsg_ItemPickup.cpp  CCSUsrMsg_KeyHintText.cpp  CCSUsrMsg_KillCam.cpp  CCSUsrMsg_MarkAchievement.cpp  CCSUsrMsg_MatchEndConditions.cpp  CCSUsrMsg_MatchStatsUpdate.cpp  CCSUsrMsg_PlayerStatsUpdate.cpp  CCSUsrMsg_PlayerStatsUpdate_Stat.cpp  CCSUsrMsg_ProcessSpottedEntityUpdate.cpp  CCSUsrMsg_ProcessSpottedEntityUpdate_SpottedEntityUpdate.cpp  CCSUsrMsg_RadioText.cpp  CCSUsrMsg_RawAudio.cpp  (+31 more)
src/core/modules/vecmath/: vecmath_wrap.cpp  vecmath_wrap.h  vecmath_wrap_python.cpp
src/core/utility/: call_python.h  ipythongenerator.h  mrecipientfilter.cpp  mrecipientfilter.h  mrecipientfilter_wrap.cpp  mrecipientfilter_wrap.h  mrecipientfilter_wrap_python.cpp  sp_util.h  wrap_macros.h
src/core/utility/patches/engine1/: patches.cpp  patches.h
src/core/utility/patches/engine2/: patches.cpp
src/core/utility/patches/engine3/: patches.h
src/loader/: loader_main.cpp  loader_main.h
src/makefiles/: shared.cmake
src/makefiles/game/: csgo.cmake  csgo.usermessages.cmake  ob-valve.cmake
src/makefiles/linux/: linux.base.cmake
src/makefiles/win32/: win32.base.cmake
src/sdks/hl2sdk-csgo/: .hg_archival.txt
src/sdks/hl2sdk-ob-valve/: .hg_archival.txt
src/sdks/hl2sdk-ob-valve/public/: eiface.h
src/sdks/hl2sdk-ob-valve/public/tier0/: memalloc.h
src/sdks/hl2sdk-ob-valve/public/tier1/: convar.h
(+229 files in other folders)
